# shadowstream

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
control/: manage.py  pyproject.toml
control/replay/: admin.py  models.py  shadowstream_pb2_grpc.py
control/shadowstream/: asgi.py  settings.py  urls.py  wsgi.py
db/: init.sql
ingestor/: ingestor.py  main.py  pyproject.toml  test_pb2.py
proto/: shadowstream.proto
replayer/: main.py  pyproject.toml  server.py  shadowstream_pb2.py
worker/: consumer_group.py  main.py  pyproject.toml
workflows/: models.py  serializers.py  views.py
